2007-04-04  Richard Henderson  <rth@redhat.com>

	* config/alpha/lib1funcs.asm: Remove unused file.

2007-04-04  Brooks Moses  <brooks.moses@codesourcery.com>

	PR other/31356
	* opts.c (print_specific_help): Fix --help=<language>
	header line.
	(common_handle_option): Support --help=common.

2007-04-04  Brooks Moses  <brooks.moses@codesourcery.com>

	PR other/31353
	* gcc.c (main): Do not run the linker if
	print_subprocess_help indicates that it shouldn't be
	run.

2007-04-04  Brooks Moses  <brooks.moses@codesourcery.com>

	PR doc/31355
	* doc/invoke.texi (--help=): Document <languages> value, fix
	formatting in tables of values.

2007-04-04  Danny Smith  <dannysmith.users.sourceforge.net>

	* config/i386/winnt-cxx.c (i386_pe_type_dllimport_p): Don't ignore
	dllimport attribute of virtual methods.

2007-04-04  Chen Liqin  <liqin@sunnorth.com.cn>

        * config/score/crti.asm: Change _bss_start to __bss_start.
        * config/score/score.h (CONDITIONAL_REGISTER_USAGE): Added.
        (OUTGOING_REG_PARM_STACK_SPACE) update.
        * config/score/score.opt: add options to make backend support
        score5, score5u, score7 and score7d.
        * config/score/score.md: Likewise.
        * config/score/misc.md: Likewise.
        * config/score/mac.md: Likewise.
        * doc/invoke.texi: Likewise.
        * doc/md.texi: update constraints define.

2007-04-03  Richard Henderson  <rth@redhat.com>

	* expr.c (store_expr): If get_signed_or_unsigned_type doesn't yield
	an appropriate type, use the mode instead.

2007-04-03  Richard Sandiford  <richard@codesourcery.com>

	* config.gcc (mips-wrs-vxworks): Add vx-common.h to tm_file.
	Set the default --with-arch setting to mips2.
	* config/mips/t-vxworks (MULTILIB_OPTIONS, MULTILIB_MATCHES)
	(MULTILIB_EXCEPTIONS): Redefine with new multilibs.
	(MULTILIB_OSDIRNAMES): Delete.
	(MULTILIB_DIRNAMES): Define.
	* config/mips/vxworks.h (LINK_SPEC): Add VXWORKS_LINK_SPEC.
	(LIB_SPEC, STARTFILE_SPEC, ENDFILE_SPEC): Define.